fix: play macro controls align in popover

--- a/packages/uhk-web/src/app/components/popover/tab/macro/macro-tab.component.scss
+++ b/packages/uhk-web/src/app/components/popover/tab/macro/macro-tab.component.scss
@@ -28,7 +28,6 @@
         .col-controls {
             min-width: 145px;
             text-align: right;
-            white-space: nowrap;
 
             &.arguments {
                 fa-icon {
